--- a/AS400SERVER/pom.xml
+++ b/AS400SERVER/pom.xml
@@ -24,6 +24,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom2</artifactId>
+			<version>2.0.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
